--- a/assets/styl/globals/globals.styl
+++ b/assets/styl/globals/globals.styl
@@ -120,3 +120,10 @@ body
 .alert.alert-success
   padding-top 20px
   padding-bottom 20px
+
+@media (max-width: 979px)
+  .hero-unit
+    h1
+      small
+        display block
+        padding-top 10px
